--- a/web/static/css/common.css
+++ b/web/static/css/common.css
@@ -7,7 +7,7 @@
     height: 40px;
     border-radius: 50%;
     background-color: #ccc;
-    color: #fff;
+    color: #5ca4d4; /* 将字体颜色设置为浅蓝色 */
     text-align: center;
     line-height: 40px;
     font-size: 20px;
