--- a/web/static/css/console.css
+++ b/web/static/css/console.css
@@ -9,7 +9,7 @@ h1 {
 
 .sidebar {
     width: 200px;
-    background-color: #e2f1fb; /* 修改为浅蓝色系列的颜色值 */
+    background-color: #e2f1fb;
     padding: 20px;
     height: 100vh;
     position: fixed;
@@ -29,16 +29,27 @@ h1 {
 .sidebar a {
     display: block;
     padding: 10px;
-    background-color: #d8e9f9; /* 修改为浅蓝色系列的颜色值 */
+    background-color: #d8e9f9;
     text-decoration: none;
     color: #333;
 }
 
 .sidebar a:hover {
-    background-color: #c3ddf7; /* 修改为浅蓝色系列的颜色值 */
+    background-color: #c3ddf7;
 }
 
 .content {
-    margin-left: 220px;
-    padding: 20px;
+    display: flex;
+    /*flex-direction: column;*/
+    height: 100vh;
+    width: 90%;
+    margin-right: 240px;
+}
+
+iframe {
+    width: calc(100% - 240px); /* 考虑到导航栏和内容区域的宽度 */
+    height: calc(100vh - 40px); /* 考虑到内容区域的上下边距 */
+    flex: 1;
+    border: 0;
+    float: right;
 }
