--- a/web/static/css/common.css
+++ b/web/static/css/common.css
@@ -1,11 +1,11 @@
-html,body{
+body{
     width: 100%;
     height: 100%;
     background-color: #f4f4f4;
     color: #3c3c3c;
     overflow-x: hidden;
 }
-* {
+*{
     padding: 0;
     margin: 0;
     list-style-type: none;
@@ -40,21 +40,21 @@ html,body{
     float: left;
     line-height: 50px;
 }
-.top-login-sign{
-    float: left;
-}
 .top-login {
     float: left;
     line-height: 50px;
+    text-decoration: none;
 }
 .top-sign{
     float: left;
     line-height: 50px;
+    text-decoration: none;
 }
 .top-nav{
     float: right;
     line-height: 50px;
     margin-right: 50px;
+    text-decoration: none;
 }
 .second{
     width: 100%;
@@ -86,6 +86,7 @@ html,body{
     margin-top: 60px;
     height: 50px;
     width: 80px;
-    line-height: 50px;
+    line-height: 40px;
     margin-left: 20px;
+    background-color: rgba(248,171,65,0.36);
 }
