--- a/web/static/css/common.css
+++ b/web/static/css/common.css
@@ -6,7 +6,6 @@ body{
     overflow-x: hidden;
 }
 *{
-    padding: 0;
     margin: 0;
     list-style-type: none;
     text-decoration: none;
@@ -14,22 +13,31 @@ body{
 .user-avatar {
     position: fixed;
     top: 60px; /* 距离页面顶部的距离 */
-    right: 20px; /* 距离页面右侧的距离 */
-    display: inline-block;
-    width: 40px;
-    height: 40px;
+    right: 100px; /* 距离页面右侧的距离 */
+    /*display: inline-block;*/
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     background-color: #ccc;
-    color: #5ca4d4; /* 将字体颜色设置为浅蓝色 */
-    text-align: center;
-    line-height: 40px;
+    z-index: 999;
+    /*color: #5ca4d4; !* 将字体颜色设置为浅蓝色 *!*/
+    /*text-align: center;*/
+    /*line-height: 30px;*/
+    /*font-size: 20px;*/
+}
+.dropdown-menu{
+    width: 70px;
+    height: 160px;
+    color: #5ca4d4;
+    line-height: 25px;
     font-size: 20px;
+    text-align: center;
+    display: inline-block;
 }
 .top{
     width: 100%;
     height: 50px;
     background-color: rgba(115,178,201,0.36);
-    /*background-color: black;*/
 }
 .top-c{
     float: left;
@@ -50,11 +58,18 @@ body{
     line-height: 50px;
     text-decoration: none;
 }
-.top-nav{
+.user-avatar li{
+    display: inline-block;
+    text-align: center;
+    height: 50px;
+    width: 100px;
+}
+.top-nav {
     float: right;
-    line-height: 50px;
+    line-height: 15px;
     margin-right: 50px;
     text-decoration: none;
+    display: inline-block;
 }
 .second{
     width: 100%;
@@ -80,6 +95,7 @@ body{
     width: 400px;
     line-height: 150px;
     margin-left: 50px;
+    border-radius: 5px;
 }
 .btn{
     float: left;
@@ -89,4 +105,5 @@ body{
     line-height: 40px;
     margin-left: 20px;
     background-color: rgba(248,171,65,0.36);
+    border-radius: 10px;
 }
